include/plplot.h

typedef double   PLFLT;
typedef float    PLFLT;
typedef int32_t        PLINT;
typedef int            PLINT;
/* For identifying logical (boolean) arguments */
typedef PLINT    PLBOOL;
#define    pllab                    c_pllab
#define    pllsty                   c_pllsty
#define    plmkstrm                 c_plmkstrm
#define    plpat                    c_plpat
#define    plprec                   c_plprec
#define    plpsty                   c_plpsty
#define    plscmap0                 c_plscmap0
#define    plscmap0n                c_plscmap0n
#define    plscmap1n                c_plscmap1n
#define    plscol0                  c_plscol0
#define    plscolbg                 c_plscolbg
#define    plscolor                 c_plscolor
#define    plscompression           c_plscompression
#define    plseed                   c_plseed
#define    plsesc                   c_plsesc
#define    plsfam                   c_plsfam
#define    plsfont                  c_plsfont
#define    plsori                   c_plsori
#define    plspause                 c_plspause
#define    plsstrm                  c_plsstrm
#define    plssub                   c_plssub
#define    plstar                   c_plstar
#define    plstripd                 c_plstripd
#define    plsxax                   c_plsxax
/* Simple routine for labelling graphs. */

PLDLLIMPEXP void
c_pllab( const char *xlabel, const char *ylabel, const char *tlabel );
/* Set line style. */

PLDLLIMPEXP void
c_pllsty( PLINT lin );
/* Creates a new stream and makes it the default.  */

PLDLLIMPEXP void
c_plmkstrm( PLINT *p_strm );
/*
 *  valid options for plot3dc():
 *
 *  DRAW_SIDES, BASE_CONT, TOP_CONT (not yet),
 *  MAG_COLOR, DRAW_LINEX, DRAW_LINEY, DRAW_LINEXY.
 *
 *  valid options for plsurf3d():
 *
 *  MAG_COLOR, BASE_CONT, SURF_CONT, FACETED, DRAW_SIDES.
 */

/* Set fill pattern directly. */

PLDLLIMPEXP void
c_plpat( PLINT nlin, PLINT *inc, PLINT *del );
/* Set the floating point precision (in number of places) in numeric labels. */

PLDLLIMPEXP void
c_plprec( PLINT setp, PLINT prec );
/* Set fill pattern, using one of the predefined patterns.*/

PLDLLIMPEXP void
c_plpsty( PLINT patt );
/* Random number generator based on Mersenne Twister.
 * Obtain real random number in range [0,1]. */

PLDLLIMPEXP PLFLT
c_plrandd( void );
/* Set color map 0 colors by 8 bit RGB values */

PLDLLIMPEXP void
c_plscmap0( PLINT *r, PLINT *g, PLINT *b, PLINT ncol0 );
/* Set number of colors in cmap 0 */

PLDLLIMPEXP void
c_plscmap0n( PLINT ncol0 );
/* Set number of colors in cmap 1 */

PLDLLIMPEXP void
c_plscmap1n( PLINT ncol1 );
/* Set a given color from color map 0 by 8 bit RGB value */

PLDLLIMPEXP void
c_plscol0( PLINT icol0, PLINT r, PLINT g, PLINT b );
/* Set the background color by 8 bit RGB value */

PLDLLIMPEXP void
c_plscolbg( PLINT r, PLINT g, PLINT b );
/* Used to globally turn color output on/off */

PLDLLIMPEXP void
c_plscolor( PLINT color );
/* Set the compression level */

PLDLLIMPEXP void
c_plscompression( PLINT compression );
/* Set seed for internal random number generator */

PLDLLIMPEXP void
c_plseed( unsigned int s );
/* Set the escape character for text strings. */

PLDLLIMPEXP void
c_plsesc( char esc );
/* Set family file parameters */

PLDLLIMPEXP void
c_plsfam( PLINT fam, PLINT num, PLINT bmax );
/* Set the current font family, style and weight */

PLDLLIMPEXP void
c_plsfont( PLINT family, PLINT style, PLINT weight );
/* Set orientation.  Must be done before calling plinit. */

PLDLLIMPEXP void
c_plsori( PLINT ori );
/* Set the pause (on end-of-page) status */

PLDLLIMPEXP void
c_plspause( PLBOOL pause );
/* Set stream number.  */

PLDLLIMPEXP void
c_plsstrm( PLINT strm );
/* Set the number of subwindows in x and y */

PLDLLIMPEXP void
c_plssub( PLINT nx, PLINT ny );
/* Initialize PLplot, passing in the windows/page settings. */

PLDLLIMPEXP void
c_plstar( PLINT nx, PLINT ny );
/* Deletes and releases memory used by a stripchart.  */

PLDLLIMPEXP void
c_plstripd( PLINT id );
/* Set up a new line style */

PLDLLIMPEXP void
c_plstyl( PLINT nms, PLINT *mark, PLINT *space );
/* Set x axis labeling parameters */

PLDLLIMPEXP void
c_plsxax( PLINT digmax, PLINT digits );
/* Sets an optional user exit handler. */

PLDLLIMPEXP void
plsexit( int ( *handler )( const char * ));