bindings/f95/plplot_bindings.f90


   interface
       subroutine c_pllab( xlab, ylab, title ) bind(c,name='c_pllab')
           implicit none
           character(len=1), dimension(*), intent(in) :: xlab, ylab, title
       end subroutine c_pllab
   end interface

   call c_pllab( trim(xlab) // c_null_char, trim(ylab) // c_null_char, trim(title) // c_null_char )

end subroutine pllab

subroutine pllsty( lin )
    integer, intent(in) :: lin
    interface
        subroutine c_pllsty( lin ) bind( c, name = 'c_pllsty' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: lin
        end subroutine c_pllsty
    end interface

    call c_pllsty( int(lin,kind=private_plint) )
end subroutine pllsty

subroutine plmkstrm( strm )
    integer, intent(in) :: strm
    interface
        subroutine c_plmkstrm( strm ) bind( c, name = 'c_plmkstrm' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: strm
        end subroutine c_plmkstrm
    end interface

    call c_plmkstrm( int(strm,kind=private_plint) )
end subroutine plmkstrm

subroutine plpat( nlin, inc, del )
    integer, intent(in) :: nlin, inc, del
    interface
        subroutine c_plpat( nlin, inc, del ) bind( c, name = 'c_plpat' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: nlin, inc, del
        end subroutine c_plpat
    end interface

    call c_plpat( int(nlin,kind=private_plint), int(inc,kind=private_plint), int(del,kind=private_plint) )

end subroutine plpat

! Should be defined only once - return type not part of disambiguation
real (kind=private_plflt) function plrandd_impl()
    interface
        function c_plrandd() bind(c,name='c_plrandd')
            include 'plplot_interface_private_types.inc'
            real(kind=private_plflt) :: c_plrandd
        end function c_plrandd
    end interface

    plrandd_impl = c_plrandd()
end function plrandd_impl

subroutine plprec( setp, prec )
    integer, intent(in) :: setp, prec
    interface
        subroutine c_plprec( setp, prec ) bind( c, name = 'c_plprec' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: setp, prec
        end subroutine c_plprec
    end interface

    call c_plprec( int(setp,kind=private_plint), int(prec,kind=private_plint) )
end subroutine plprec

subroutine plpsty( patt )
    integer, intent(in) :: patt
    interface
        subroutine c_plpsty( patt ) bind( c, name = 'c_plpsty' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: patt
        end subroutine c_plpsty
    end interface

    call c_plpsty( int(patt,kind=private_plint) )
end subroutine plpsty

subroutine plscmap0( r, g, b )
    integer, dimension(:), intent(in) :: r, g, b

    interface
        subroutine c_plscmap0( r, g, b, n ) bind(c,name='c_plscmap0')
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), dimension(*), intent(in) :: r, g, b
            integer(kind=private_plint), value :: n
        end subroutine c_plscmap0
    end interface

    call c_plscmap0( int(r,kind=private_plint), int(g,kind=private_plint), int(b,kind=private_plint), &
                     size(r,kind=private_plint) )
end subroutine plscmap0

subroutine plscmap0n( n )
    integer, intent(in) :: n
    interface
        subroutine c_plscmap0n( n ) bind( c, name = 'c_plscmap0n' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: n
        end subroutine c_plscmap0n
    end interface

    call c_plscmap0n( int(n,kind=private_plint) )
end subroutine plscmap0n

subroutine plscmap1n( n )
    integer, intent(in) :: n
    interface
        subroutine c_plscmap1n( n ) bind( c, name = 'c_plscmap1n' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: n
        end subroutine c_plscmap1n
    end interface

    call c_plscmap1n( int(n,kind=private_plint) )
end subroutine plscmap1n

subroutine plscol0( icol, r, g, b )
    integer, intent(in) :: icol, r, g, b
    interface
        subroutine c_plscol0( icol, r, g, b ) bind( c, name = 'c_plscol0' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: icol, r, g, b
        end subroutine c_plscol0
    end interface

    call c_plscol0( int(icol,kind=private_plint), &
                    int(r,kind=private_plint), int(g,kind=private_plint), int(b,kind=private_plint) )
end subroutine plscol0

subroutine plscolbg( r, g, b )
    integer, intent(in) :: r, g, b
    interface
        subroutine c_plscolbg( r, g, b ) bind( c, name = 'c_plscol0' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: r, g, b
        end subroutine c_plscolbg
    end interface

    call c_plscolbg( int(r,kind=private_plint), int(g,kind=private_plint), int(b,kind=private_plint) )
end subroutine plscolbg


subroutine plscolor( color )
    integer, intent(in) :: color
    interface
        subroutine c_plscolor( color ) bind( c, name = 'c_plscolor' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: color
        end subroutine c_plscolor
    end interface

    call c_plscolor( int(color,kind=private_plint) )
end subroutine plscolor

subroutine plscompression( compression )
    integer, intent(in) :: compression
    interface
        subroutine c_plscompression( compression ) bind( c, name = 'c_plscompression' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: compression
        end subroutine c_plscompression
    end interface

    call c_plscompression( int(compression,kind=private_plint) )
end subroutine plscompression

subroutine plseed( s )
    integer, intent(in) :: s
    interface
        subroutine c_plseed( s ) bind( c, name = 'c_plseed' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: s
        end subroutine c_plseed
    end interface

    call c_plseed( int(s,kind=private_plint) )
end subroutine plseed

! TODO: character-version
subroutine plsesc( esc )
    integer, intent(in) :: esc
    interface
        subroutine c_plsesc( esc ) bind( c, name = 'c_plsesc' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: esc
        end subroutine c_plsesc
    end interface

    call c_plsesc( int(esc,kind=private_plint) )
end subroutine plsesc

subroutine plsfam( fam, num, bmax )
    integer, intent(in) :: fam, num, bmax
    interface
        subroutine c_plsfam( fam, num, bmax ) bind( c, name = 'c_plsfam' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: fam, num, bmax
        end subroutine c_plsfam
    end interface

    call c_plsfam( int(fam,kind=private_plint), int(num,kind=private_plint), int(bmax,kind=private_plint) )
end subroutine plsfam

subroutine plsfont( family, style, weight )
    integer, intent(in) :: family, style, weight
    interface
        subroutine c_plsfont( family, style, weight ) bind( c, name = 'c_plsfont' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: family, style, weight
        end subroutine c_plsfont
    end interface

    call c_plsfont( int(family,kind=private_plint), int(style,kind=private_plint), int(weight,kind=private_plint) )
end subroutine plsfont

subroutine plsori( rot )
    integer, intent(in) :: rot
    interface
        subroutine c_plsori( rot ) bind( c, name = 'c_plsori' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: rot
        end subroutine c_plsori
    end interface

    call c_plsori( int(rot,kind=private_plint) )
end subroutine plsori

subroutine plspause( lpause )
    logical, intent(in) :: lpause

    interface
        subroutine c_plspause( ipause ) bind(c,name='c_plspause')
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: ipause
        end subroutine c_plspause
    end interface

   call c_plspause( int( merge(1,0,lpause),kind=private_plint) )
end subroutine plspause

subroutine plsstrm( strm )
    integer, intent(in) :: strm
    interface
        subroutine c_plsstrm( strm ) bind( c, name = 'c_plsstrm' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: strm
        end subroutine c_plsstrm
    end interface

    call c_plsstrm( int(strm,kind=private_plint) )
end subroutine plsstrm

subroutine plssub( nx, ny )
    integer, intent(in) :: nx, ny
    interface
        subroutine c_plssub( nx, ny ) bind( c, name = 'c_plssub' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: nx, ny
        end subroutine c_plssub
    end interface

    call c_plssub( int(nx,kind=private_plint), int(ny,kind=private_plint) )
end subroutine plssub

subroutine plstar( nx, ny )
    integer, intent(in) :: nx, ny
    interface
        subroutine c_plstar( nx, ny ) bind( c, name = 'c_plstar' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: nx, ny
        end subroutine c_plstar
    end interface

    call c_plstar( int(nx,kind=private_plint), int(ny,kind=private_plint) )
end subroutine plstar

subroutine plstripd( id )
    integer, intent(in) :: id
    interface
        subroutine c_plstripd( id ) bind( c, name = 'c_plstripd' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: id
        end subroutine c_plstripd
    end interface

    call c_plstripd( int(id,kind=private_plint) )
end subroutine plstripd

subroutine plstyl_scalar( n, mark, space )
    integer, intent(in) :: n, mark, space

    call plstyl_n_array( n, (/ mark /), (/ space /) )
end subroutine plstyl_scalar

subroutine plstyl_array( mark, space )
    integer, dimension(:), intent(in) :: mark, space

    call plstyl_n_array( size(mark), mark, space )
end subroutine plstyl_array

subroutine plstyl_n_array( n, mark, space )
    integer, intent(in) :: n
    integer, dimension(:), intent(in) :: mark, space
    interface
        subroutine c_plstyl( n, mark, space ) bind( c, name = 'c_plstyl' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: n
            integer(kind=private_plint), dimension(*) :: mark, space
        end subroutine c_plstyl
    end interface

    call c_plstyl( int(n,kind=private_plint), int(mark,kind=private_plint), int(space,kind=private_plint) )
end subroutine plstyl_n_array

subroutine plsxax( digmax, digits )
    integer, intent(in) :: digmax, digits
    interface
        subroutine c_plsxax( digmax, digits ) bind( c, name = 'c_plsxax' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: digmax, digits
        end subroutine c_plsxax
    end interface

    call c_plsxax( int(digmax,kind=private_plint), int(digits,kind=private_plint) )
end subroutine plsxax
